--- a/module/area/index.html
+++ b/module/area/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="container"></div>
 </body>
-<script src="../bower_components/d3/d3.js"></script>
+<script src="../../bower_components/d3/d3.js"></script>
 <script src="js/index.js"></script>
 
 </html>
